# face-recognition-service

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  RUNBOOK  alembic.ini  docker-compose.yml  prompt-rev.txt  prompt.txt  pyproject.toml  requirements.txt  ruff.toml  tree.js  tree.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  a046c806cb72_add_foreign_keys_to_faces_and_.py
api/: config.py  dependencies.py  main.py  middleware.py
api/routers/: enrollment.py  health.py  identification.py  metrics.py  persons.py
clients/nodejs/: example.js  package.json
clients/python/: example.py
core/: constants.py  database.py  exceptions.py  models.py  schemas.py
deployments/kubernetes/: deployment.yaml
docs/: postman_collection.json
indexing/: __init__.py  base.py  faiss_index.py  ivfpq_index.py  milvus_adapter.py  qdrant_adapter.py  scann_adapter.py
monitoring/: prometheus.yml
notebooks/: batch_enrollment.ipynb  kaggle_deployment.ipynb  threshold_calibration.ipynb
scripts/: batch_enroll.py  delete_all_persons.py  download_models.py  init_db.py  migrate.py  reindex.py  seed_data.py
services/: background_jobs.py  enrollment_service.py  face_engine.py  face_quality.py  identification_service.py  liveness.py  person_service.py
tests/: conftest.py
tests/fixtures/: mock_faces.py
tests/integration/: test_enrollment.py  test_health.py  test_identification.py
tests/unit/: test_face_engine.py  test_indexing.py
utils/: image_utils.py  logging.py  metrics.py
webui/: main.py
webui/templates/: index.html
(+2 files in other folders)
